--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-express project",
   "main": "index.js",
   "scripts": {
-    "heroku-postbuild": "cd clinet && npm install && npm install ==only=dev --no-shrinkwrap && npm run build",
+    "heroku-postbuild": "cd clinet && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "start": "node server/app.js"
   },
   "engines": {
