--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react-express project",
   "main": "index.js",
   "scripts": {
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "heroku-postbuild": "cd client && NPM_CONFIG_PRODUCTION=false npm install && npm run build",
     "start": "node server/app.js"
   },
   "engines": {
